--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título Aqui - Mapa Leaflet</title>
+    <title>Mapa meli-beta</title>
     <!-- Link para a biblioteca Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -17,8 +17,11 @@
         <div id="mapid" role="application" aria-label="Mapa interativo" tabindex="0"></div> <!-- Adicionado tabindex para acessibilidade -->
         <div class="button-container">
             <button type="button" aria-label="Obter minha localização" id="get-location-button">Minha Localização</button> <!-- Adicionado ID e modificado o texto do botão -->
-            <button id="send-location-button">Enviar localização</button>
+            <button id="send-location-button">Enviar Localização</button>
+            <button id="dark-mode">Modo Escuro</button>
         </div>
+        
+
     </section>
     
     <!-- Link para a biblioteca Leaflet JS -->
